--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Type: Package
 Package: RosyApp
-Title: What the Package Does (Title Case)
+Title: Rosy Dev
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line) Use four
-    spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: 
+    person("Brandon", "Rose", , "thecodingdocs@gmail.com", role = "cre")
+Description: Rosy development for your R package.
+License: MIT + file LICENSE
+URL: https://github.com/brandonerose/RosyApp
+BugReports: https://github.com/brandonerose/RosyApp/issues
 Imports: 
     config,
     magrittr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
-URL: https://github.com/brandonerose/RosyApp
-BugReports: https://github.com/brandonerose/RosyApp/issues
