--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,12 @@ URL: https://github.com/brandonerose/RosyApp
 BugReports: https://github.com/brandonerose/RosyApp/issues
 Imports: 
     config,
-    magrittr
+    golem,
+    listviewer,
+    magrittr,
+    shiny,
+    shinydashboard,
+    shinydashboardPlus
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
