--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,20 @@ URL: https://github.com/brandonerose/RosyApp
 BugReports: https://github.com/brandonerose/RosyApp/issues
 Imports: 
     config,
+    DT,
+    easyalluvial,
+    flextable,
     golem,
     listviewer,
     magrittr,
+    parcats,
+    plotly,
+    RosyUtils,
     shiny,
     shinydashboard,
-    shinydashboardPlus
+    shinydashboardPlus,
+    survminer,
+    table1
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
