--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(make_parcats)
 export(make_table1)
 export(mod_list_server)
 export(mod_list_ui)
+export(plotify)
 import(RosyUtils)
 import(golem)
 import(shiny)
