--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ export(make_table1)
 export(mod_list_server)
 export(mod_list_ui)
 export(plotify)
+export(plotly_bar)
+export(plotly_parcats)
 import(RosyUtils)
 import(golem)
 import(shiny)
