--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(dbControlbar)
 export(dbHeader)
 export(dbSidebar)
 export(make_DT_table)
+export(make_DT_table_simple)
+export(make_DT_table_simpler)
 export(make_parcats)
 export(make_table1)
 export(mod_list_server)
