--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,8 @@ Imports:
     shinydashboardPlus,
     survminer,
     table1
+Remotes: 
+    github::brandonerose/RosyUtils
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
