--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dbSidebar)
 export(make_DT_table)
 export(make_DT_table_simple)
 export(make_parcats)
+export(make_survival)
 export(make_table1)
 export(mod_list_server)
 export(mod_list_ui)
